fix message bubbles not aligned correctly

--- a/react-app/src/components/MessagePage/MessagePage.css
+++ b/react-app/src/components/MessagePage/MessagePage.css
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: column;
   padding: 5px 5px 10px;
+  width: 100%;
   /* position: fixed; */
   /* bottom: 60px; */
 }
@@ -163,15 +164,20 @@
   border: 1px solid gray;
   border-radius: 5px;
   width: fit-content;
-  max-width: 90%;
+  max-width: 80%;
   padding: 5px;
   margin: 2px 0px;
 }
 
-.message-and-profileimg-bubble {
+.message-and-profileimg-bubble-me-right {
   display: flex;
-  /* justify-content: r; */
-  align-items: center;
+  justify-content: flex-end;
+  /* align-items: center; */
+}
+.message-and-profileimg-bubble-them-left {
+  display: flex;
+  justify-content: flex-start;
+  /* align-items: center; */
 }
 .reverse {
   flex-direction: row-reverse;
